﻿Chat and Discuss @ http://nillysrealm.com/
If you find any bugs/exploits please report it to staff or post it on the website.
Dye command opened up to everyone. Visit https://www.realmeye.com/wiki/dyes-and-cloths for dye names.